--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,14 @@ Thumbs.db
 # ignore environment data
 .env
 
+# ignore server configs
+.htaccess
+
 # ignore some accidental stuff that might make it into the repo
 node_modules
 /backups
+/sql-dumps/*.gz
+/sql-dumps/*.sql
 
 # ignore editor configs
 .vscode
@@ -22,4 +27,4 @@ node_modules
 /wp-content
 
 # Exceptions
-# !/wp-content/themes/my-theme
+# !/wp-content/themes/lando-wp-site-theme
