--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,13 @@
 {
-  "name": "lando-wp-site-template",
+  "name": "certainlyakey/lando-wp-site-template",
   "description": "A Wordpress theme",
   "type": "project",
   "require": {
-    "johnpbloch/wordpress": "^5.4",
-    "timber/timber": "^1.16",
-    "advanced-custom-fields/advanced-custom-fields-pro": "^5.6"
+    "johnpbloch/wordpress-core": "6.0.2",
+    "johnpbloch/wordpress-core-installer": "2.0.*",
+    "vlucas/phpdotenv": "^5.0",
+    "timber/timber": "2.0.0-beta.1",
+    "junaidbhura/advanced-custom-fields-pro": "*"
   },
   "repositories": [
     {
@@ -15,22 +17,26 @@
     {
       "type": "package",
       "package": {
-        "name": "advanced-custom-fields/advanced-custom-fields-pro",
-        "version": "5.6.9",
+        "name": "junaidbhura/advanced-custom-fields-pro",
+        "version": "6.0.0",
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
-          "url": "https://connect.advancedcustomfields.com/index.php?p=pro&a=download"
+          "url": "https://www.advancedcustomfields.com"
         },
         "require": {
-          "philippbaschke/acf-pro-installer": "^1.0",
-          "composer/installers": "^1.0"
+            "junaidbhura/composer-wp-pro-plugins": "*"
         }
       }
     }
   ],
   "config": {
-    "vendor-dir": "wp-content/vendor"
+    "vendor-dir": "wp-content/vendor",
+    "allow-plugins": {
+      "junaidbhura/composer-wp-pro-plugins": true,
+      "johnpbloch/wordpress-core-installer": true,
+      "composer/installers": true
+    }
   },
   "require-dev": {
     "wpackagist-plugin/debug-bar": "*",
