Added missing gitignore overrides

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,16 @@ node_modules
 /wp
 
 # ignore Wordress content (exceptions below)
-/wp-content
+/wp-content/*
+!/wp-content/mu-plugins/
+!/wp-content/plugins/
+!/wp-content/themes/
+
+# ignore all mu-plugins, plugins, and themes
+# unless explicitly whitelisted at the end of this file
+/wp-content/mu-plugins/*
+/wp-content/plugins/*
+/wp-content/themes/*
 
 # Exceptions
 # !/wp-content/themes/lando-wp-site-theme
