--- a/.lando.yml
+++ b/.lando.yml
@@ -51,5 +51,4 @@ env_file: # env variables can only be used inside Docker, not inside this .lando
   - .env
 proxy:
   node:
-    # 3000 is an internal port
-    - bs.lando-wp-site-template.lndo.site:3000
+    - vite.lando-wp-site-theme.lndo.site:3000
