Fixed a problem where composer install would fail due to missing trailing slash (with composer 2.3+)
https://github.com/junaidbhura/composer-wp-pro-plugins/issues/34

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "type": "wordpress-plugin",
         "dist": {
           "type": "zip",
-          "url": "https://www.advancedcustomfields.com"
+          "url": "https://www.advancedcustomfields.com/"
         },
         "require": {
             "junaidbhura/composer-wp-pro-plugins": "*"
