Added a comment about a lando rebuild necessary upon modifying the .env file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+# lando rebuild is required upon changing this file
 # (Required) Needed for automated installation of ACF Pro plugin. Get the key here https://www.advancedcustomfields.com/my-account/subscriptions/. If missing you'll have to install ACF Pro manually
 ACF_PRO_KEY=
