Updated version of a core WP theme installed on issuing lando wpinstall

--- a/.lando.yml
+++ b/.lando.yml
@@ -46,7 +46,7 @@ tooling: # commands available from outside (lando <command>)
     cmd: wp media regenerate --yes
   wpinstall:
     service: appserver
-    cmd: 'wp core install --url=http://$LANDO_APP_NAME.$LANDO_DOMAIN --title=WPTemplate --admin_user=admin --admin_password=password --admin_email=admin@localhost.test && wp plugin activate --all && wp theme install twentytwentytwo --activate'
+    cmd: 'wp core install --url=http://$LANDO_APP_NAME.$LANDO_DOMAIN --title=WPTemplate --admin_user=admin --admin_password=password --admin_email=admin@localhost.test && wp plugin activate --all && wp theme install twentytwentythree --activate'
 events:
   pre-start:
     - node: ln -s $LANDO_MOUNT/wp-content/themes/lando-wp-site-theme/public/assets $LANDO_MOUNT/assets
