Added GENERATE_ASSETS_FOR_DEV to env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # lando rebuild is required upon changing this file
 # (Required) Needed for automated installation of ACF Pro plugin. Get the key here https://www.advancedcustomfields.com/my-account/subscriptions/. If missing you'll have to install ACF Pro manually
 ACF_PRO_KEY=
+GENERATE_ASSETS_FOR_DEV=true
