Implemented a way to keep the website loading with all assets on local when lando watch is not running

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ node_modules
 /assets
 !/assets/
 
+# ignore an HMR marker file necessary for PHP to understand if Vite is watching
+/.vite-hmr
+
 # Exceptions
 # !/wp-content/themes/lando-wp-site-theme
